Workbook 1.1
  new stuff
  - set properties of child figures within groups
  - text wrap
  - added "Export Selection to Image" function
  - allow more then one instance of workbook to run at one time
  - added "show" command line option to show another running instance of workbook if there is one
  - added check for DotNet framework version 2 in installer (and prompt to download if not present)
  - installer sets Inifile->Zoom option to "FitToWidth"
  - installer sets text color to black
  - improved WFViewer scrollbars (including reduced flickering and not showing when they should not)
  - previews tile horizontally when the previewbar is twice the width (or more) of MaxPreviewWidth
  - autoscroll the previewbar when a drag and drop operation nears the edges
  - cut/copy/paste functions within TextEditFigure
  - apply text wrap to smart notepad imports
  - preliminary wmf (windows metafile) support
  - "DefaultPageSize" option in Workbook.ini
  - "AutosaveInterval" option in Workbook.ini (milliseconds, set to 0 to turn off)

  bug fixes
  - stop application closing aberrantly when screen annotation form is closed
  - pages not using global background when document loaded
